Change header/footer margin to padding to prevent scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,10 +28,12 @@ body {
 
 header, main, footer {
    width: 80%;
+   max-width: 1100px;
+   margin: auto;
 }
 
 header{
-    margin: 50px auto 50px auto;
+    padding: 20px 0 50px 0;
     display: flex;
     align-items: center;
 }
@@ -124,7 +126,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    margin: 50px auto 50px auto;
+    padding: 50px 0 20px 0; 
 }
 
 .related-articles {
@@ -133,7 +135,7 @@ footer {
 }
 
 .related-articles > img {
-    width: 100px;
+    width: 30%;
 }
 
 .related-container {
@@ -147,7 +149,11 @@ footer {
     color: var(--new-stories-color);
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1000px) {
+    main {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     #story-container {
         grid-template-columns: 1fr;
     }
